fixes #1634 - Settings panel gets an un-aligned scrollbar when opened

--- a/htdocs/css/bootstrap-rcloud-tweaks.css
+++ b/htdocs/css/bootstrap-rcloud-tweaks.css
@@ -447,3 +447,8 @@ ul.recent-notebooks-list li a {
 .jqtree-element .jqtree-title.jqtree_common {
     word-break: break-all;
 }
+
+
+#settings-body-wrapper.panel-body {
+    padding-right: 0;
+}
